2006-06-09  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/Makefile.in: Add cguid-uuid and olectlid-uuid as sources and
	objects.
	* lib/uuid.c (CLSID_CColorPropPage, CLSID_CFontPropPage,
	CLSID_CPicturePropPage, CLSID_Picture_Dib, CLSID_Picture_Metafile,
	CLSID_StdFont, CLSID_StdPicture, GUID_NULL, IID_ICreateTypeInfo,
	IID_ICreateTypeInfo2, IID_ICreateTypeLib, IID_ICreateTypeLib2, IID_IDebug,
	IID_IDebugStream, IID_IDispatch, IID_IEnumFORMATETC,IID_IEnumMoniker,
	IID_IEnumOLEVERB, IID_IEnumSTATDATA, IID_IEnumSTATSTG, IID_IEnumString,
	IID_IEnumUnknown, IID_IEnumVARIANT, IID_IOleLink, IID_IPSFactory,
	IID_IRpcChannel, IID_IRpcProxy, IID_IRpcStub, IID_ITypeInfo,
	IID_ITypeInfo2, IID_ITypeLib, IID_ITypeLib2): Remove.  Moved to relevant
	files.
	* lib/oaidl-uuid.c (IID_ICreateTypeInfo, IID_ICreateTypeInfo2,
	IID_ICreateTypeLib, IID_ICreateTypeLib2, IID_ITypeInfo, IID_ITypeInfo2,
	IID_ITypeLib, IID_ITypeLib2, IID_IEnumVARIANT): Define.
	* lib/cguid-uuid.c: New file.
	* lib/olectlid-uuid.c: New file.

2006-06-08  Chris Sutcliffe  <ir0nh34d@users.sourceforge.net>

	* lib/Makefile.in: Add objsafe-uuid oaidl-uuid docobj-uuid comcat-uuid
	exdisp-uuid mlang-uuid objidl-uuid as sources and objects.
	* lib/uuid.c (CATID_Control, CATID_DocObject, CATID_Insertable,
	CATID_PersistsToPropertyBag, CATID_PersistsToStorage, CATID_PersistsToStream,
	CATID_PersistsToStreamInit, CATID_Printable, CATID_Programmable,
	CLSID_CMultiLanguage, CLSID_StdComponentCategoriesMgr, CLSID_WebBrowser,
	DIID_DWebBrowserEvents, DIID_DWebBrowserEvents2, IID_IAdviseSink,
	IID_IAdviseSink2, IID_IBindCtx, IID_ICatInformation, IID_ICatRegister,
	IID_IClassActivator, IID_IContinueCallback, IID_ICreateErrorInfo,
	IID_IDataAdviseHolder, IID_IDataObject, IID_IEnumCATEGORYINFO,
	IID_IEnumGUID, IID_IEnumOleDocumentViews, IID_IErrorInfo,
	IID_IExternalConnection, IID_IFillLockBytes, IID_ILockBytes, IID_IMalloc,
	IID_IMarshal, IID_IMessageFilter, IID_IMoniker, IID_IObjectSafety,