@@ -38,3 +38,6 @@ DEFINE_OLEGUID(IID_IPropertyStorage,0x138,0,0);
 DEFINE_OLEGUID(IID_IClassActivator,0x140,0,0);
 DEFINE_GUID(IID_IFillLockBytes,0x99caf010,0x415e,0x11cf,0x88,0x14,0,0xaa,0,0xb5,0x69,0xf5);
 DEFINE_GUID(IID_IProgressNotify,0xa9d758a0,0x4617,0x11cf,0x95,0xfc,0,0xaa,0,0x68,0xd,0xb4);
+DEFINE_OLEGUID(IID_IClientSecurity,0x13D,0,0);
+DEFINE_OLEGUID(IID_IMallocSpy,0x1d,0,0);
+DEFINE_OLEGUID(IID_IServerSecurity,0x13E,0,0);
